network-policy/cassandra.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: cassandra
  name: cassandra
  namespace: cassandra
spec:
  containers:
  - image: nginx
    name: cassandra
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: cassandra
  name: cassandra
  namespace: cassandra
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: cassandra
status:
  loadBalancer: {}
